[project]
name = "utility"
version = "0.1.0"
description = ""
authors = [
    { name = "VamsiKolla-QA", email = "saivamsikolla@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "selenium (>=4.32.0,<5.0.0)",
    "allure-behave (>=2.14.2,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "utility", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
